@@ -26,6 +26,8 @@ ActiveRecord::Migration.verbose = false
 
 # Defining our classes in one place as well as soem core tests that need coercing date/time types.
 
+class UpperTestDefault < ActiveRecord::Base ; self.table_name = 'UPPER_TESTS' ; end
+class UpperTestLowered < ActiveRecord::Base ; self.table_name = 'upper_tests' ; end
 class TableWithRealColumn < ActiveRecord::Base; end
 class FkTestHasFk < ActiveRecord::Base ; end
 class FkTestHasPk < ActiveRecord::Base ; end
