@@ -1,6 +1,9 @@
 
 * 3.1.0.rc *
 
+* New #lowercase_schema_reflection configuration that allows you to downcase all tables and columns.
+  Good for legacy databases. Fixes #86. Thanks @dmajkic.
+
 * Rails 3.1 with prepared statement support. Uses "EXEC sp_executesql ..." for just about everything now.
 
 
